# 2022-09-09-Python-Word-Encoder-Decoder

./: encoded.csv  example.py  model_word_encoder.py  pyproject.toml  train.py  try.ipynb  try.py
